# frugal-router

./: .dockerignore  .env.example  .gitignore  BUILD.md  Dockerfile  Dockerfile.fullocal  Dockerfile.local  Dockerfile.local.dockerignore  Dockerfile.onv29  Makefile  PLAN.md  README.md  SUBMISSION.md  pyproject.toml  v29-freeze.txt
configs/: default.yaml  dev.yaml  fireworks_solvers.yaml  local_first.yaml
data/: dev_tasks.jsonl  eval_bench.jsonl  eval_gen.jsonl  eval_pool.jsonl  rehearsal_local_19.json  variants.jsonl
docs/: VIDEO_SCRIPT.md  build_video.py  deck.md  demo.tape  frugal-router-slides.html  frugal-router-slides.pptx
scripts/: campaign.py  download_model.sh  eval_local_tier.py  eval_variants.py  fetch_bench.py  gen_eval.py  gen_variants.py  rehearse_onv29.py  run_eval2.py  smoke_image.sh  spacy_ner.py
tests/: test_agent.py  test_batching.py  test_cache.py  test_classify.py  test_classify_coverage.py  test_cli.py  test_code_debug.py  test_code_verify.py  test_confidence.py  test_csp.py  test_evaluation.py  test_extract.py  test_harness.py  test_local_tier.py  test_normalize.py  test_predictor.py  test_provable_tiers.py  test_rehearsal_fixture.py  test_sandbox.py  test_scored_path.py  test_solvers.py  test_solvers_adversarial.py  test_sweep.py  test_tier0.py  test_variants.py
training/: assemble_para.py  build_dataset.py  build_dataset_big.py  build_dataset_para.py  build_dataset_v2.py  distill.jsonl  distill_teacher.py  eval_gguf.py  eval_gpu.py  paraphrase_vllm.py  run_all.sh  run_all_big.sh  run_all_cuda.sh  run_para.sh  sft.jsonl  train_lora_amd.py  (+1 more)
(+36 files in other folders)
